--- a/project.ipynb
+++ b/project.ipynb
@@ -464,7 +464,7 @@
     }
    ],
    "source": [
-    "train_model(15, batch_size, learning_rate, model_save_path, patience)"
+    "train_model(num_epochs, batch_size, learning_rate, model_save_path, patience)"
    ]
   }
  ],
